--- a/package.json
+++ b/package.json
@@ -11,16 +11,27 @@
     },
     "devDependencies": {
         "axios": "^0.21",
-        "bootstrap": "^4.6.0",
-        "jquery": "^3.6",
+        "deepmerge": "^4.2.2",
         "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "popper.js": "^1.16.1",
-        "postcss": "^8.1.14",
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.11",
-        "sass-loader": "^11.0.1",
-        "vue": "^2.6.12",
-        "vue-template-compiler": "^2.6.12"
+        "postcss": "^8.3.0",
+        "resolve-url-loader": "^2.3.1",
+        "sass": "^1.20.1",
+        "sass-loader": "^8.0.0",
+        "vue": "^2.6.14",
+        "vue-loader": "^15.9.5",
+        "vue-template-compiler": "^2.6.12",
+        "webpack": "^5.23.0"
+    },
+    "dependencies": {
+        "@mdi/font": "^5.9.55",
+        "cross-env": "^7.0.3",
+        "laravel-mix-polyfill": "^3.0.0",
+        "papaparse": "^5.3.1",
+        "slugify": "^1.5.3",
+        "targets-webpack-plugin": "^3.0.0",
+        "vee-validate": "^3.4.5",
+        "vuetify": "^2.5.9",
+        "vue-router": "^3.5.1",
+        "vuex": "^3.6.2"
     }
 }
