updated login with username

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=abee218faaae8f893850",
-    "/css/app.css": "/css/app.css?id=c77454867759846f0058"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
