--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
         "webpack": "^5.23.0"
     },
     "dependencies": {
-        "@mdi/font": "^5.9.55",
+        "@mdi/font": "^6.5.95",
         "cross-env": "^7.0.3",
         "laravel-mix-polyfill": "^3.0.0",
         "papaparse": "^5.3.1",
+        "pinia": "^2.0.17",
+        "@vue/composition-api": "^1.6.2",
         "slugify": "^1.5.3",
         "targets-webpack-plugin": "^3.0.0",
         "vee-validate": "^3.4.5",
-        "vuetify": "^2.5.9",
         "vue-router": "^3.5.1",
-        "vuex": "^3.6.2"
+        "vuetify": "^2.5.9"
     }
 }
