updated laravel 8 and packages

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=901fa8b049a5fd70545fafabd4127fbc",
+    "/css/app.css": "/css/app.css?id=ae3977077211f2f082c169e5f75e835e"
 }
