--- a/package.json
+++ b/package.json
@@ -10,29 +10,25 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
-        "deepmerge": "^4.2.2",
-        "laravel-mix": "^6.0.6",
-        "postcss": "^8.3.0",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
-        "sass-loader": "^8.0.0",
-        "vue": "^2.6.14",
+        "axios": "^1.3.4",
+        "deepmerge": "^4.3.0",
+        "laravel-mix": "^6.0.49",
+        "postcss": "^8.4.21",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.58.3",
+        "sass-loader": "^13.2.0",
+        "vue": "^2.7",
         "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.12",
         "webpack": "^5.23.0"
     },
     "dependencies": {
-        "@mdi/font": "^6.5.95",
+        "@mdi/font": "^7.1.96",
         "cross-env": "^7.0.3",
-        "laravel-mix-polyfill": "^3.0.0",
-        "papaparse": "^5.3.1",
-        "pinia": "^2.0.17",
-        "@vue/composition-api": "^1.6.2",
-        "slugify": "^1.5.3",
-        "targets-webpack-plugin": "^3.0.0",
-        "vee-validate": "^3.4.5",
-        "vue-router": "^3.5.1",
-        "vuetify": "^2.5.9"
+        "laravel-mix-polyfill": "^3.0.1",
+        "vee-validate": "^3.4.14",
+        "vue-router": "^3.6.5",
+        "vuetify": "^2.6.14",
+        "vuex": "^3.6.2"
     }
 }
